--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@prismicio/client": "5.1.1",
+    "@prismicio/slice-simulator-react": "^0.2.0",
     "@stripe/stripe-js": "^1.23.0",
     "axios": "^0.26.0",
     "faunadb": "^4.5.2",
     "next": "^12.1.0",
     "next-auth": "^4.2.1",
+    "next-slicezone": "^0.2.1",
+    "prismic-reactjs": "^1.3.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
@@ -25,6 +30,7 @@
     "@types/react": "^17.0.39",
     "eslint": "8.9.0",
     "eslint-config-next": "12.0.10",
+    "slice-machine-ui": "^0.2.1",
     "typescript": "^4.5.5"
   }
 }
