--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "^12.1.0",
     "next-auth": "^4.2.1",
     "next-slicezone": "^0.2.1",
+    "prismic-dom": "^2.2.7",
     "prismic-reactjs": "^1.3.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.17",
+    "@types/prismic-dom": "^2.1.1",
     "@types/react": "^17.0.39",
     "eslint": "8.9.0",
     "eslint-config-next": "12.0.10",
